Swagger implementation done and cleanups
